test/files/errors/reservedKeyword3.jg
_main int ()
{
    if int = 0;

    0 return;
}